<resources>
    <string name="app_name">SpotifyCloneApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="your_library">Your Library</string>
    <string name="all">All</string>
    <string name="music">Music</string>
    <string name="category">Category</string>
    <string name="what_do_you_want_to_listen_to">What do you want to listen to?</string>
    <string name="find_in_liked_songs">Find in Liked Songs</string>
    <string name="sort">Sort</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="_778">778</string>
    <string name="songs">songs</string>

    <string name="notification_channel_name">Music Playback</string>
    <string name="notification_channel_description">Shows the currently playing song</string>

</resources>