<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Library">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        >

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"
            android:id="@+id/v1"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95"
            android:id="@+id/v2"/>


        <com.google.android.material.search.SearchBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/find_in_liked_songs"
            app:layout_constraintStart_toStartOf="@id/v1"
            app:layout_constraintEnd_toStartOf="@id/sort"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            app:titleTextColor="@color/background2"
            android:id="@+id/searchbar"
            style="@style/SearchBarSpotify"
            app:layout_constraintHorizontal_weight="8"
            />

        <com.google.android.material.chip.Chip
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/searchbar"
            app:layout_constraintEnd_toEndOf="@id/v2"
            android:id="@+id/sort"
            app:layout_constraintTop_toTopOf="@id/searchbar"
            app:layout_constraintBottom_toBottomOf="@id/searchbar"
            android:text="@string/sort"
            app:layout_constraintHorizontal_weight="2" />


        <com.google.android.material.search.SearchView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@id/v1"
            app:layout_constraintEnd_toEndOf="@id/v2"
            app:layout_constraintTop_toBottomOf="@id/searchbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="10dp"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/searchrv"/>

        </com.google.android.material.search.SearchView>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1"
            android:id="@+id/h1"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/v1"
            app:layout_constraintTop_toBottomOf="@id/h1"
            android:text="@string/liked_songs"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/likedsongsview"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/likedsongsview"
            app:layout_constraintTop_toBottomOf="@id/likedsongsview"
            android:text="@string/_778"
            android:layout_marginTop="6dp"
            android:id="@+id/likedsongscount"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/likedsongscount"
            app:layout_constraintTop_toTopOf="@id/likedsongscount"
            android:text="@string/songs"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/songstv"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@id/v1"
            app:layout_constraintEnd_toEndOf="@id/v2"
            app:layout_constraintTop_toBottomOf="@id/likedsongscount"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/likedsongsrv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>